[workspace]
members = [
    "crates/evm-errors",
    "crates/interface"
]
resolver = "3"

[workspace.package]
version = "0.0.8"
edition = "2024"
authors = ["ADI Foundation"]
homepage = "https://adi.foundation/"
repository = "https://github.com/ADI-Foundation-Labs/ADI-Stack-zkOS-Interface"
license = "MIT OR Apache-2.0"
keywords = ["blockchain", "zksync"]
categories = ["cryptography"]

[workspace.dependencies]
alloy-consensus = { version = "1.0.30" }
alloy-primitives = { version = "1.0.30" }
serde = { version = "1.0.219" }

zksync_os_evm_errors = { version = "=0.0.8", path = "crates/evm-errors" }
